<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login" >

    <TextView
        android:id="@+id/tv_ad1"
        style="@style/Custom.Font.Title.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_ad2"
        android:alpha="0"
        android:text="@string/prolusion_1" />
    <TextView
        android:id="@+id/tv_ad2"
        style="@style/Custom.Font.Title.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="300dp"
        android:alpha="0"
        android:text="@string/prolusion_2" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_ad1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/TextView01"
            style="@style/Custom.Font.Title.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/sys_title"
            android:textSize="70sp" />
    </TableRow>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableRow1"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

</RelativeLayout>