<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/text_color"
    tools:context="com.elder.abilityevaluate.activity.MainListActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/panel_main" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color" >
        </TextView>
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_msg_border"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="每日简报："
                android:textSize="23dp"
                >
            </TextView>
            <TextView
                android:id="@+id/register_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/register_detail"
                android:textSize="23dp"
                >
            </TextView>
            <TextView
                android:id="@+id/evaluate_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/evaluate_detail"
                android:textSize="23dp"
                >
            </TextView>
            <TextView
                android:id="@+id/left_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/left_detail"
                android:textSize="23dp"
                >
            </TextView>

        </LinearLayout>

        <ListView
            android:id="@+id/menu_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:layout_marginTop="20dp"
            android:gravity="center" >
        </ListView>
    </LinearLayout>

</LinearLayout>
